[FIX](web) 增加模糊查询的功能
